--- a/src/component/style/style.scss
+++ b/src/component/style/style.scss
@@ -1,6 +1,16 @@
 $ig-bg: #FAFAFA;
+$ig-gray: rgb(211, 211, 211);
+$fb: rgb(36, 55, 94);
 // construct
 //style
+.text-fb {
+    color: $fb;
+}
+
+.font-075 {
+    font-size: 0.75rem;
+}
+
 //responsive
 @mixin pc-width {
     @media only screen and (min-width: 992px) {
@@ -17,26 +27,40 @@ $ig-bg: #FAFAFA;
 
 .ig-bg {
     background: $ig-bg;
+    .ig-login-btn{
+        width: 100%;
+        height: 5rem;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center center;
+        margin: auto;
+    }
     .login-box {
-        background: #FFFFFF;
         @include pc-width {
-            width: 50%;
+            background: #FFFFFF;
+            border: 1px solid $ig-gray;
+            width: 30%;
         }
         .ig-login-title {
             width: 100%;
-            height: 30vh;
+            height: 15vh;
             background-repeat: no-repeat;
             background-size: contain;
             background-position: center center;
         }
+        
         input {
             background: $ig-bg;
             font-size: 0.75rem;
             font-weight: 100;
-            border: 1px solid rgb(211, 211, 211);
+            border: 1px solid $ig-gray;
             padding: 0.75rem;
             border-radius: 5px;
             font-family: '-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif';
+        }
+        .bottom-line {
+            border-bottom: 1px solid $ig-gray;
+            flex: 1 1;
         }
     }
 }
