--- a/src/component/style/style.scss
+++ b/src/component/style/style.scss
@@ -12,7 +12,7 @@ $fb: rgb(36, 55, 94);
     font-size: 0.75rem;
 }
 
-.font-600{
+.font-600 {
     font-weight: 600;
 }
 
@@ -20,6 +20,10 @@ $fb: rgb(36, 55, 94);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
+}
+
+.bg {
+    @include bg();
 }
 
 //responsive
@@ -86,16 +90,26 @@ body {
     overflow: hidden;
     .self-photo {
         flex: 2 0 30px;
-        .photo {
+        .photo-container {
+            width: 180px;
+            height: 180px;
             border-radius: 100%;
-            height: 168px;
-            width: 168px;
-            @include bg();
+            border: 2px solid $ig-gray;
+            box-sizing: border-box;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .photo {
+                border-radius: 100%;
+                height: 168px;
+                width: 168px;
+                @include bg();
+            }
         }
     }
     .document {
         flex: 2 0 30px;
-        button{
+        button {
             background: $ig-blue;
         }
         h1 {
@@ -104,7 +118,7 @@ body {
             margin: 0;
             line-height: 32px;
         }
-        p{
+        p {
             margin-bottom: 0.25rem;
         }
     }
@@ -141,6 +155,95 @@ body {
         .bottom-line {
             border-bottom: 1px solid $ig-gray;
             flex: 1 1;
+        }
+    }
+    .history {
+        display: flex;
+        justify-content: start;
+        .history-container {
+            margin: 1rem 2rem;
+            h6 {
+                width: 77px;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
+            }
+            .photo-container {
+                width: 85px;
+                height: 85px;
+                border-radius: 100%;
+                border: 1px solid $ig-gray;
+                box-sizing: border-box;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                .history-photo {
+                    width: 77px;
+                    height: 77px;
+                    border-radius: 100%;
+                }
+            }
+        }
+    }
+    .post-banner {
+        border-top: 1px solid $ig-gray;
+        span {
+            font-size: 0.75rem;
+            margin: 1rem 0 0;
+            display: inline-block;
+        }
+        div {
+            position: relative;
+            top: -1px;
+        }
+        div:nth-child(1) {
+            font-weight: 600;
+            border-top: 1px solid black;
+        }
+        div:nth-child(2) {
+            color: #999999;
+        }
+    }
+    .cards {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        width: 100%;
+        position: relative;
+        top: -1rem;
+        .card-element {
+            flex: 0 1 30%;
+            margin-top: 2rem;
+            position: relative;
+            .bg {
+                height: 15rem;
+                background-size: cover;
+                &:hover{
+                    filter: brightness(0.8);
+                }
+            }
+            &:hover{
+                cursor: pointer;
+                .icon{
+                    display: inline-block;
+                }
+            }
+            .icon {
+                position: absolute;
+                display: none;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                color: #FFFFFF;
+                span:nth-child(2) {
+                    display: inline-block;
+                    margin-right: 1rem;
+                }
+            }
+        }
+        &::after {
+            content: "";
+            flex: 0 1 30%;
         }
     }
 }
