--- a/src/component/style/style.scss
+++ b/src/component/style/style.scss
@@ -28,7 +28,7 @@ $fb: rgb(36, 55, 94);
 
 //responsive
 @mixin pc-width {
-    @media only screen and (min-width: 992px) {
+    @media only screen and (min-width: 576px) {
         @content
     }
 }
@@ -46,11 +46,18 @@ body {
 }
 
 .ig-bar {
-    height: 77px;
-    display: flex;
-    justify-content: space-around;
+    &.short{
+        height: 52px;
+    }
     align-items: center;
+    border-bottom: 1px solid $ig-gray;
+    display: flex;
     flex-direction: row;
+    height: 77px;
+    position: fixed;
+    transition: all 0.2s linear;
+    justify-content: space-around;
+    z-index: 2;
     svg {
         font-size: 1.75rem;
     }
@@ -63,7 +70,12 @@ body {
         .bar-img {
             width: 7rem;
             height: 2rem;
+            opacity: 1;
+            transition: all 0.2s linear;
             @include bg();
+            &.short{
+                opacity: 0;
+            }
         }
     }
     .bar-middle {
@@ -87,12 +99,20 @@ body {
     max-width: 935px;
     min-height: 100vh;
     margin: auto;
+    padding-top: 3.75rem;
     overflow: hidden;
     .self-photo {
-        flex: 2 0 30px;
+        flex: 1 0 30px;
+        @include pc-width() {
+            flex: 2 0 30px;
+        }
         .photo-container {
-            width: 180px;
-            height: 180px;
+            width: 100px;
+            height: 100px;
+            @include pc-width() {
+                width: 180px;
+                height: 180px;
+            }
             border-radius: 100%;
             border: 2px solid $ig-gray;
             box-sizing: border-box;
@@ -101,16 +121,21 @@ body {
             align-items: center;
             .photo {
                 border-radius: 100%;
-                height: 168px;
-                width: 168px;
+                height: 90px;
+                width: 90px;
+                @include pc-width() {
+                    height: 168px;
+                    width: 168px;
+                }
                 @include bg();
             }
         }
     }
     .document {
         flex: 2 0 30px;
-        button {
-            background: $ig-blue;
+        button:disabled {
+            color: #000000;
+            font-weight: 600;
         }
         h1 {
             font-weight: 300;
@@ -141,6 +166,7 @@ body {
         .ig-login-title {
             width: 100%;
             height: 15vh;
+            mix-blend-mode: darken;
             @include bg();
         }
         input {
@@ -160,8 +186,15 @@ body {
     .history {
         display: flex;
         justify-content: start;
+        overflow-x: auto;
+        @include pc-width() {
+            margin-top: 3rem;
+        }
         .history-container {
-            margin: 1rem 2rem;
+            margin: 0.5rem 0.5rem;
+            @include pc-width() {
+                margin: 1rem 2rem;
+            }
             h6 {
                 width: 77px;
                 text-overflow: ellipsis;
@@ -169,39 +202,71 @@ body {
                 overflow: hidden;
             }
             .photo-container {
-                width: 85px;
-                height: 85px;
+                width: 60px;
+                height: 60px;
                 border-radius: 100%;
                 border: 1px solid $ig-gray;
                 box-sizing: border-box;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                @include pc-width() {
+                    width: 85px;
+                    height: 85px;
+                }
                 .history-photo {
-                    width: 77px;
-                    height: 77px;
+                    width: 55px;
+                    height: 55px;
                     border-radius: 100%;
+                    @include pc-width() {
+                        width: 77px;
+                        height: 77px;
+                    }
                 }
             }
         }
     }
-    .post-banner {
+    .s-follow {
+        color: gray;
+        margin: 0;
+        padding: 1rem 0;
         border-top: 1px solid $ig-gray;
         span {
-            font-size: 0.75rem;
+            font-weight: 600;
+            color: #000000;
+        }
+    }
+    .post-banner {
+        border-top: 1px solid $ig-gray;
+        @include pc-width() {
+            margin-top: 3rem;
+        }
+        svg {
+            font-size: 1.75rem;
+            margin-top: 0.75rem;
+            @include pc-width() {
+                font-size: 1rem;
+                margin-top: 0;
+            }
+        }
+        span {
             margin: 1rem 0 0;
-            display: inline-block;
+            display: none;
+            @include pc-width() {
+                font-size: 0.75rem;
+                display: inline-block;
+            }
         }
         div {
             position: relative;
             top: -1px;
+            &:not(:first-child) {
+                color: #999999;
+            }
         }
         div:nth-child(1) {
             font-weight: 600;
             border-top: 1px solid black;
-        }
-        div:nth-child(2) {
-            color: #999999;
         }
     }
     .cards {
@@ -209,22 +274,31 @@ body {
         flex-wrap: wrap;
         justify-content: space-between;
         width: 100%;
-        position: relative;
-        top: -1rem;
-        .card-element {
-            flex: 0 1 30%;
-            margin-top: 2rem;
+        @include pc-width() {
             position: relative;
+            top: -1rem;
+        }
+        .card-element {
+            flex: 0 1 32%;
+            margin-top: .5rem;
+            position: relative;
+            @include pc-width() {
+                flex: 0 1 30%;
+                margin-top: 2rem;
+            }
             .bg {
-                height: 15rem;
+                height: 7rem;
                 background-size: cover;
-                &:hover{
+                @include pc-width() {
+                    height: 15rem;
+                }
+                &:hover {
                     filter: brightness(0.8);
                 }
             }
-            &:hover{
+            &:hover {
                 cursor: pointer;
-                .icon{
+                .icon {
                     display: inline-block;
                 }
             }
