--- a/src/component/style/style.scss
+++ b/src/component/style/style.scss
@@ -4,10 +4,6 @@ $ig-blue: #3897F0;
 $fb: rgb(36, 55, 94);
 // construct
 //style
-.text-fb {
-    color: $fb;
-}
-
 .font-075 {
     font-size: 0.75rem;
 }
@@ -16,9 +12,17 @@ $fb: rgb(36, 55, 94);
     font-weight: 600;
 }
 
+.text-fb {
+    color: $fb;
+}
+
+.pt-70 {
+    padding-top: 70px;
+}
+
 @mixin bg {
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     background-position: center center;
 }
 
@@ -46,7 +50,7 @@ body {
 }
 
 .ig-bar {
-    &.short{
+    &.short {
         height: 52px;
     }
     align-items: center;
@@ -73,7 +77,7 @@ body {
             opacity: 1;
             transition: all 0.2s linear;
             @include bg();
-            &.short{
+            &.short {
                 opacity: 0;
             }
         }
@@ -137,7 +141,8 @@ body {
             color: #000000;
             font-weight: 600;
         }
-        h1 {
+        h1,
+        svg {
             font-weight: 300;
             font-size: 28px;
             margin: 0;
@@ -145,6 +150,73 @@ body {
         }
         p {
             margin-bottom: 0.25rem;
+        }
+    }
+    .post-container {
+        border: 1px solid $ig-gray;
+        .post-bar {
+            display: flex;
+            justify-content: space-between;
+            border-bottom: 1px solid $ig-gray;
+            .image {
+                width: 32px;
+                height: 32px;
+                border-radius: 100%;
+                @include bg();
+            }
+            h2 {
+                color: $ig-gray;
+                font-size: 1.5rem;
+                margin: 0;
+            }
+            h6 {
+                margin: 0;
+                font-size: .75rem;
+            }
+        }
+        .post-photo {
+            width: 100%;
+            height: 60vmin;
+            @include bg();
+        }
+        .sign svg {
+            font-size: 1.5rem;
+        }
+        .text {
+            font-size: 14px;
+            margin-bottom: .5rem;
+            padding-left: .75rem;
+            p {
+                margin-bottom: .25rem;
+            }
+            strong {
+                font-weight: 600;
+            }
+            .hide {
+                display: -webkit-box;
+                -webkit-line-clamp: 1; // 限制行數
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+            .image {
+                width: 20px;
+                height: 20px;
+                border-radius: 100%;
+                @include bg();
+            }
+        }
+        .time {
+            font-size: 0.25rem;
+            margin-left: 1rem;
+            color: #999999;
+        }
+        .post {
+            border-top: 1px solid $ig-gray;
+            font-weight: 600;
+            opacity: 0.5;
         }
     }
 }
