--- a/src/component/style/style.scss
+++ b/src/component/style/style.scss
@@ -1,5 +1,6 @@
 $ig-bg: #FAFAFA;
 $ig-gray: rgb(211, 211, 211);
+$grayLight: #999999;
 $ig-blue: #3897F0;
 $fb: rgb(36, 55, 94);
 // construct
@@ -33,7 +34,19 @@ $fb: rgb(36, 55, 94);
 //responsive
 @mixin pc-width {
     @media only screen and (min-width: 576px) {
-        @content
+        @content;
+    }
+}
+
+@mixin md-width {
+    @media only screen and (min-width: 720px) {
+        @content;
+    }
+}
+
+@mixin lg-width {
+    @media only screen and (min-width: 990px) {
+        @content;
     }
 }
 
@@ -42,11 +55,24 @@ html,
 body {
     padding: 0;
     margin: 0;
+    &.noscroll {
+        height: 100%;
+        overflow: hidden;
+    }
 }
 
 .layout {
     box-sizing: border-box;
     min-height: 100vh;
+}
+
+.dark-view {
+    background: #000000;
+    opacity: 0.5;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    z-index: 3;
 }
 
 .ig-bar {
@@ -211,13 +237,93 @@ body {
         .time {
             font-size: 0.25rem;
             margin-left: 1rem;
-            color: #999999;
+            color: $grayLight;
         }
         .post {
             border-top: 1px solid $ig-gray;
             font-weight: 600;
             opacity: 0.5;
         }
+    }
+    .side-part {
+        position: fixed;
+        right: 0;
+        &.moving {
+            top: 5rem;
+        }
+        @include lg-width() {
+            max-width: 293px;
+            left: 65%;
+            right: auto;
+        }
+        .user {
+            .image {
+                width: 50px;
+                height: 50px;
+                border-radius: 100%;
+                @include bg();
+            }
+            h6,
+            p {
+                margin: 0;
+                font-size: .9rem;
+            }
+            p {
+                font-size: .75rem;
+                color: $grayLight;
+            }
+        }
+        .section {
+            border: 1px solid $ig-gray;
+            .section-bar {
+                margin-bottom: .5rem;
+                h6:nth-child(1) {
+                    color: $grayLight;
+                }
+                h6:nth-child(2) {
+                    font-weight: 600;
+                    font-size: .85rem;
+                }
+            }
+            .friend-list {
+                height: 12.5rem;
+                overflow-y: auto;
+            }
+            .friends {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin: 0 0 1rem;
+                .image-border {
+                    width: 2.4rem;
+                    height: 2.4rem;
+                    border-radius: 100%;
+                    border: 1px solid $ig-gray;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                .image {
+                    width: 2rem;
+                    height: 2rem;
+                    border-radius: 100%;
+                    @include bg();
+                }
+                h6,
+                p {
+                    margin: 0;
+                    font-size: .9rem;
+                }
+                p {
+                    font-size: .75rem;
+                    color: $grayLight;
+                }
+            }
+        }
+    }
+    .about {
+        font-size: .75rem;
+        color: $grayLight;
     }
 }
 
@@ -333,7 +439,7 @@ body {
             position: relative;
             top: -1px;
             &:not(:first-child) {
-                color: #999999;
+                color: $grayLight;
             }
         }
         div:nth-child(1) {
@@ -390,6 +496,46 @@ body {
         &::after {
             content: "";
             flex: 0 1 30%;
+        }
+    }
+    .closes {
+        background: none;
+        border: none;
+        color: #FFFFFF;
+        font-size: 3rem;
+        outline: none;
+        position: absolute;
+        top: 0;
+        right: 1rem;
+        filter: brightness(1.5);
+        z-index: 4;
+    }
+    .dark-box {
+        left: 50%;
+        position: absolute;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 4;
+        button{
+            border: none;
+            background: none;
+            outline: none;
+            svg{
+                color: $ig-gray;
+                font-size: 2.5rem;
+            }
+        }
+        .post-container {
+            background: #FFFFFF;
+            height: 75vh;
+            width: 935px;
+            .image{
+                background-color: #000000;
+                width: 100%;
+                height: 100%;
+                @include bg();
+                background-size: contain;
+            }
         }
     }
 }
