--- a/src/component/style/style.scss
+++ b/src/component/style/style.scss
@@ -55,10 +55,6 @@ html,
 body {
     padding: 0;
     margin: 0;
-    &.noscroll {
-        height: 100%;
-        overflow: hidden;
-    }
 }
 
 .layout {
@@ -239,11 +235,7 @@ body {
             margin-left: 1rem;
             color: $grayLight;
         }
-        .post {
-            border-top: 1px solid $ig-gray;
-            font-weight: 600;
-            opacity: 0.5;
-        }
+        
     }
     .side-part {
         position: fixed;
@@ -329,6 +321,31 @@ body {
 
 .ig-bg {
     background: $ig-bg;
+    .time {
+        font-size: 0.75rem;
+        color: $grayLight;
+    }
+    .leave-message {
+        border-top: 1px solid $ig-gray;
+        font-weight: 600;
+        opacity: 0.5;
+    }
+    .like {
+        font-size: 14px;
+        margin-bottom: .5rem;
+        p {
+            margin-bottom: .25rem;
+        }
+        strong {
+            font-weight: 600;
+        }
+        .like-image {
+            width: 20px;
+            height: 20px;
+            border-radius: 100%;
+            @include bg();
+        }
+    }
     .ig-login-btn {
         width: 100%;
         height: 5rem;
@@ -470,12 +487,10 @@ body {
                 @include pc-width() {
                     height: 15rem;
                 }
-                &:hover {
-                    filter: brightness(0.8);
-                }
             }
             &:hover {
                 cursor: pointer;
+                filter: brightness(0.8);
                 .icon {
                     display: inline-block;
                 }
@@ -487,6 +502,7 @@ body {
                 top: 50%;
                 transform: translate(-50%, -50%);
                 color: #FFFFFF;
+                filter: brightness(2);
                 span:nth-child(2) {
                     display: inline-block;
                     margin-right: 1rem;
@@ -504,37 +520,80 @@ body {
         color: #FFFFFF;
         font-size: 3rem;
         outline: none;
-        position: absolute;
-        top: 0;
-        right: 1rem;
+        position: fixed;
+        top: -1rem;
+        right: 0.5rem;
         filter: brightness(1.5);
         z-index: 4;
     }
     .dark-box {
         left: 50%;
-        position: absolute;
+        position: fixed;
         top: 50%;
         transform: translate(-50%, -50%);
         z-index: 4;
-        button{
+        button {
             border: none;
             background: none;
             outline: none;
-            svg{
+            align-self: center;
+            svg {
                 color: $ig-gray;
                 font-size: 2.5rem;
             }
         }
         .post-container {
             background: #FFFFFF;
-            height: 75vh;
+            height: 70vh;
             width: 935px;
-            .image{
+            .image {
                 background-color: #000000;
                 width: 100%;
                 height: 100%;
                 @include bg();
                 background-size: contain;
+            }
+            .image-border {
+                width: 2.5rem;
+                height: 2.5rem;
+                border-radius: 100%;
+                border: 1px solid $ig-gray;
+                flex-shrink: 0;
+                .image {
+                    width: 2rem;
+                    height: 2rem;
+                    border-radius: 100%;
+                    @include bg();
+                }
+            }
+            .post-bar {
+                border-bottom: 1px solid $ig-gray;
+            }
+            .reg-text {
+                font-weight: 400;
+                word-break: break-all;
+            }
+            .context {
+                height: 15rem;
+                overflow-y: auto;
+                overflow-x: hidden;
+                 &::-webkit-scrollbar {
+                    width: 0px;
+                    background: transparent;
+                }
+                svg {
+                    font-size: 2rem;
+                    margin-left: 1rem;
+                    color: $grayLight;
+                }
+            }
+            .sign{
+                color: $grayLight;
+                font-size: 1.5rem;
+                border-top: 1px solid $ig-gray;
+                svg:not(:first-child){
+                    margin: 0 .5rem;
+                }
             }
         }
     }
