--- a/src/component/style/style.scss
+++ b/src/component/style/style.scss
@@ -2,6 +2,7 @@ $ig-bg: #FAFAFA;
 $ig-gray: rgb(211, 211, 211);
 $grayLight: #999999;
 $ig-blue: #3897F0;
+$line-bg:#d3dae2;
 $fb: rgb(36, 55, 94);
 // construct
 //style
@@ -635,7 +636,7 @@ body {
         transform: translate(-50%, -50%);
         z-index: 4;
         width: 100%;
-        @include pc-width(){
+        @include pc-width() {
             width: 35%;
         }
         button {
@@ -666,11 +667,122 @@ body {
         }
     }
 }
-@keyframes pop{
-    0%{
+
+@keyframes pop {
+    0% {
         transform: translate(-50%, -50%) scale(1.1);
     }
-    100%{
+    100% {
         transform: translate(-50%, -50%) scale(1);
     }
-  }
+}
+
+.line-bg {
+    position: relative;
+    .line-login-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        left: 50%;
+        top: 35%;
+        width: 280px;
+        transform: translate(-50%, -50%);
+        #line-icon {
+            width: 100%;
+            height: 2.5rem;
+            @include bg();
+            background-size: contain;
+        }
+        .bar {
+            width: 100%;
+            div {
+                padding: 1rem 0;
+                border: 1px solid $ig-gray;
+                &:nth-child(2) {
+                    background: $ig-gray;
+                    h6 {
+                        color: rgb(83, 83, 83);
+                        opacity: 0.8;
+                    }
+                }
+                h6 {
+                    font-size: .9rem;
+                    font-weight: 600;
+                    margin: 0;
+                    text-align: center;
+                }
+            }
+        }
+        .inputs{
+            input{
+                border-radius: 0;
+                border: 1px solid $ig-gray;
+                border-top: none;
+                padding: .5rem;
+                font-size: .9rem;
+                &:focus {
+                    outline: none;
+                }
+            }
+            .first-input{
+                display: flex;
+                input{
+                    width: 85%;
+                    border-right: none;
+                }
+                div{
+                    align-items: center;
+                    border: 1px solid $ig-gray;
+                    border-left: none;
+                    display: flex;
+                    justify-content: center;
+                    width: 15%;
+                    svg{
+                        color: $grayLight;
+                    }
+                }
+            }
+        }
+        .button{
+            button{
+                font-size: .9rem;
+                border-radius: 2px;
+            }
+        }
+        .btn-text{
+            font-size: .9rem;
+            color: #7c7c7c;
+            font-weight: 600;
+            &:hover{
+                color: #555555;
+                cursor: pointer;
+            }
+        }
+    }
+    .bottom-part{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: 1%;
+        width: 280px;
+        button{
+            border: 1px solid $ig-gray;
+            background: #FFFFFF;
+            border-radius: 3px;
+            padding: .5rem;
+            font-size: .9rem;
+            color: #424242;
+            font-weight: 600;
+            &:hover{
+                cursor: default;
+            }
+        }
+        .group{
+            font-size: .75rem;
+        }
+    }
+}
