--- a/src/component/style/style.scss
+++ b/src/component/style/style.scss
@@ -4,6 +4,7 @@ $grayLight: #999999;
 $ig-blue: #3897F0;
 $line-bg:#d3dae2;
 $fb: rgb(36, 55, 94);
+$link: 'http://localhost:9000/ig/assets';
 // construct
 //style
 .font-075 {
@@ -820,17 +821,26 @@ body {
                     color: #FFFFFF;
                 }
             }
-            .left-part {
+            .section {
                 border-right: 1px solid $ig-gray;
+                background: #FFFFFF;
                 height: calc(100vh - 56px);
-                .search-bar {
+                padding: 0;
+                .bar {
                     color: $ig-gray;
-                    padding: .5rem 0;
+                    padding: .5rem 1rem;
                     svg {
                         font-size: .9rem;
                     }
                     h2 {
                         font-size: 1.5rem;
+                    }
+                    h6 {
+                        color: #000000;
+                        font-size: .75rem;
+                        font-weight: 400;
+                        margin: 0;
+                        margin-left: .5rem;
                     }
                     svg,
                     h2 {
@@ -843,26 +853,42 @@ body {
                         padding-left: 1rem;
                         &:focus {
                             outline: none;
+                            cursor: default;
                         }
                     }
+                    .img {
+                        width: 35px;
+                        height: 35px;
+                        border-radius: 100%;
+                        @include bg();
+                    }
                 }
-                .friends-box {
+                .box {
                     height: 40rem;
                     overflow-y: scroll;
-                    position: relative;
-                    left: 15px;
+                    padding-right: .25rem;
                     &::-webkit-scrollbar {
                         width: 0;
                         background: transparent;
                     }
                     &:hover {
+                        padding-right: 0;
                         &::-webkit-scrollbar {
                             width: .25rem;
-                            background: $grayLight;
+                            background: #FFFFFF;
+                        }
+                        &::-webkit-scrollbar-thumb {
+                            background-color: $grayLight;
                         }
                     }
                     .friend {
                         font-size: .75rem;
+                        padding: 1.5rem 0;
+                        background: #FFFFFF;
+                        &:hover {
+                            filter: brightness(0.9);
+                            cursor: pointer;
+                        }
                         .img {
                             border-radius: 100%;
                             flex-shrink: 0;
@@ -877,6 +903,7 @@ body {
                             h6,
                             p {
                                 text-overflow: ellipsis;
+                                font-size: .75rem;
                                 margin: 0;
                                 overflow: hidden;
                                 white-space: nowrap;
@@ -885,18 +912,89 @@ body {
                         }
                         .note {
                             .time {
-                                // font-size: .75rem;
                                 color: $grayLight;
                                 margin: 0;
                             }
                             .number {
                                 border-radius: 100%;
-                                background: #01BF00;
+                                background: #0bc060;
+                                box-sizing: border-box;
                                 color: #FFFFFF;
                                 margin: 0;
-                                height: 1.5rem;
-                                width: 1.5rem;
+                                padding: 2px 7.5px;
                                 flex-shrink: 0;
+                            }
+                        }
+                    }
+                    .date {
+                        text-align: center;
+                        .date-text {
+                            display: inline-block;
+                            background-color: #f3f3f4;
+                            border-radius: 1rem;
+                            font-size: 11px;
+                            color: #82878f;
+                            text-align: center;
+                            padding: 3px 14px;
+                        }
+                    }
+                    .message {
+                        font-size: 15px;
+                        margin: 1.5rem;
+                        line-height: 21px;
+                        position: relative;
+                        .content {
+                            position: relative;
+                            display: inline-block;
+                            border-radius: 5px;
+                            word-wrap: break-word;
+                            word-break: break-all;
+                            padding: 7px 11px 8px;
+                            -webkit-user-select: text;
+                            user-select: text;
+                        }
+                        .message-time {
+                            font-size: 11px;
+                            color: #adb0b7;
+                            white-space: nowrap;
+                            margin: 0 7px 1px;
+                        }
+                        .img {
+                            border-radius: 10px;
+                            width: 8rem;
+                            height: 8rem;
+                            @include bg();
+                        }
+                        &.left {
+                            justify-content: flex-start;
+                            .content {
+                                background-color: #eceef3;
+                            }
+                            &.sign::before {
+                                content: "";
+                                background-image: url($link+'/leftEdge.PNG');
+                                position: absolute;
+                                top: 0;
+                                left: -7px;
+                                width: 8px;
+                                height: 8px;
+                                @include bg();
+                            }
+                        }
+                        &.right {
+                            justify-content: flex-end;
+                            .content {
+                                background-color: #c2f5a8;
+                            }
+                            &.sign::before {
+                                content: "";
+                                background-image: url($link+'/rightEdge.PNG');
+                                position: absolute;
+                                top: 0;
+                                right: -7px;
+                                width: 8px;
+                                height: 8px;
+                                @include bg();
                             }
                         }
                     }
@@ -905,8 +1003,26 @@ body {
                     border-top: 1px solid $ig-gray;
                     opacity: 0.8;
                     font-size: 1.5rem;
+                    height: 3.75rem;
                     svg:not(:first-child) {
                         opacity: 0.8;
+                    }
+                    input {
+                        border: none;
+                        font-size: .75rem;
+                        &:focus {
+                            outline: none;
+                            cursor: default;
+                        }
+                    }
+                    .right-part {
+                        svg {
+                            font-size: 1.25rem;
+                            opacity: .4;
+                            &:not(:first-child) {
+                                margin-left: 1rem;
+                            }
+                        }
                     }
                 }
             }
