--- a/src/component/style/style.scss
+++ b/src/component/style/style.scss
@@ -1111,15 +1111,26 @@ body {
                 font-weight: 500;
                 text-align: center;
                 margin-bottom: 1rem;
-                td{
+                td {
                     padding: .25rem 0;
                 }
-                .currentMonth{
+                .currentMonth {
                     font-weight: 600;
                     color: #000000;
                 }
+                .today {
+                    display: inline-flex;
+                    align-items: center;
+                    background-color: #1a73e8;
+                    border-radius: 100%;
+                    color: #fff;
+                    padding: .25rem;
+                    width: 20px;
+                    height: 20px;
+                    justify-content: center;
+                }
             }
-            .search{
+            .search {
                 background: #F1F3F4;
                 font-weight: 600;
                 font-size: .9rem;
@@ -1127,10 +1138,97 @@ body {
                 padding: .5rem;
                 width: 100%;
             }
+            .other-cal {
+                svg {
+                    &:first-child {
+                        opacity: 0.6;
+                        margin-right: 1rem;
+                    }
+                }
+            }
+            .check {
+                align-items: center;
+                display: flex;
+                margin: .5rem 0;
+                label {
+                    margin-bottom: 0;
+                    margin-left: .5rem;
+                }
+                input {
+                    position: relative;
+                    width: 1rem;
+                    height: 1rem;
+                    &::after {
+                        border-radius: 3px;
+                        content: "";
+                        color: #fff;
+                        display: inline-block;
+                        height: 1rem;
+                        position: absolute;
+                        top: 0;
+                        visibility: visible;
+                        padding: 0px 3px;
+                        width: 1rem;
+                    }
+                    &:checked:after {
+                        content: "\002713";
+                        font-size: .75rem;
+                    }
+                    &.red {
+                        &::after {
+                            background-color: #C8273E;
+                        }
+                    }
+                    &.green {
+                        &::after {
+                            background-color: #33B679;
+                        }
+                    }
+                    &.purple {
+                        &::after {
+                            background-color: #FFFFFF;
+                            border: 2px solid #3F51B5;
+                        }
+                    }
+                    &.blue {
+                        &::after {
+                            background-color: #FFFFFF;
+                            border: 2px solid #4285F4;
+                        }
+                    }
+                    &.dark-green {
+                        &::after {
+                            background-color: #0B8043;
+                        }
+                    }
+                }
+            }
+            .security {
+                color: #5f6368;
+                margin-bottom: .25rem;
+                font-size: .75rem;
+                font-weight: 600;
+            }
         }
-        .check{
-            display: flex;
-            align-items: center;
+        .cal-container{
+            .main{
+                width: 95%;
+            }
+            .right-part{
+                border-left: 1px solid $ig-gray;
+                width: 5%;
+                .img{
+                    width: 20px;
+                    height: 20px;
+                    @include bg();
+                }
+                div,span{
+                    margin: 1.25rem 0;
+                }
+                span, svg{
+                    opacity: .8;
+                }
+            }
         }
     }
 }
