--- a/src/component/style/style.scss
+++ b/src/component/style/style.scss
@@ -1056,10 +1056,12 @@ body {
                 border-color: $ig-gray;
                 padding: .25rem .75rem;
                 &:hover {
-                    background: #FFFFFF;
-                    color: #6C757D;
+                    background: rgb(240, 240, 240);
+                    color: #5a5a5a;
                     outline: none;
-                    cursor: default;
+                }
+                &:focus{
+                    box-shadow: none;
                 }
             }
             h1 {
@@ -1088,8 +1090,18 @@ body {
     }
     .body {
         height: calc(100vh - 60px);
+        .today {
+            display: inline-flex;
+            align-items: center;
+            background-color: #1a73e8;
+            border-radius: 100%;
+            color: #fff;
+            padding: .25rem;
+            width: 20px;
+            height: 20px;
+            justify-content: center;
+        }
         .left-part {
-            border-right: 1px solid $ig-gray;
             padding: 0 2rem;
             button {
                 background: #FFFFFF;
@@ -1097,7 +1109,11 @@ body {
                 box-shadow: 0 1px 3px $grayLight;
                 border-radius: 1.5rem;
                 margin-top: 1rem;
+                outline: none;
                 padding: .5rem 1.5rem;
+                &:hover{
+                    cursor: default;
+                }
             }
             .bar {
                 span,
@@ -1117,17 +1133,6 @@ body {
                 .currentMonth {
                     font-weight: 600;
                     color: #000000;
-                }
-                .today {
-                    display: inline-flex;
-                    align-items: center;
-                    background-color: #1a73e8;
-                    border-radius: 100%;
-                    color: #fff;
-                    padding: .25rem;
-                    width: 20px;
-                    height: 20px;
-                    justify-content: center;
                 }
             }
             .search {
@@ -1210,22 +1215,125 @@ body {
                 font-weight: 600;
             }
         }
-        .cal-container{
-            .main{
+        .cal-container {
+            padding: 0;
+            .main {
                 width: 95%;
+                .main-table {
+                    height: 100%;
+                    text-align: center;
+                    table-layout: fixed;
+                    width: 100%;
+                    &.five{
+                        td{
+                            height: 20%;
+                        }
+                    }
+                    &.six{
+                        td{
+                            height: 16.66666%;
+                        }
+                    }
+                    td {
+                        border: 1px solid $ig-gray;
+                        border-top: none;
+                        overflow: hidden;
+                        padding-top: .5rem;
+                        vertical-align: top;
+                        .today {
+                            width: 1.5rem;
+                            height: 1.5rem;
+                        }
+                        p {
+                            box-sizing: border-box;
+                            border-radius: .25rem;
+                            color: #FFFFFF;
+                            font-size: .75rem;
+                            font-weight: 400;
+                            text-align: left;
+                            margin: .25rem 0;
+                            padding: 5px;
+                            white-space: nowrap;
+                            overflow: hidden;
+                            width: 90%;
+                            &.p0 {
+                                background-color: #039BE5;
+                            }
+                            &.p1 {
+                                background-color: #F45223;
+                            }
+                            &.p2 {
+                                background-color: #B39ED6;
+                            }
+                            &.p3 {
+                                background-color: #D72060;
+                            }
+                        }
+                        ul {
+                            display: flex;
+                            align-items: baseline;
+                            margin: 0;
+                            margin-bottom: -1rem;
+                            padding-left: .75rem;
+                            list-style: none;
+                            &::before {
+                                content: "\002022";
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                font-size: 1.75rem;
+                                font-weight: 1000;
+                                position: relative;
+                                top: 2px;
+                                height: 0;
+                                width: .75rem;
+                                margin-left: -.5rem;
+                                margin-right: .5rem;
+                            }
+                            &.li0 {
+                                &::before {
+                                    color: #039BE5;
+                                }
+                            }
+                            &.li1 {
+                                &::before {
+                                    color: #F45223;
+                                }
+                            }
+                            &.li2 {
+                                &::before {
+                                    color: #B39ED6;
+                                }
+                            }
+                            &.li3 {
+                                &::before {
+                                    color: #D72060;
+                                }
+                            }
+                            li {
+                                font-size: .75rem;
+                                font-weight: 400;
+                                text-align: left;
+                                margin: 0;
+                                width: 90%;
+                            }
+                        }
+                    }
+                }
             }
-            .right-part{
-                border-left: 1px solid $ig-gray;
+            .right-part {
                 width: 5%;
-                .img{
+                .img {
                     width: 20px;
                     height: 20px;
                     @include bg();
                 }
-                div,span{
+                div,
+                span {
                     margin: 1.25rem 0;
                 }
-                span, svg{
+                span,
+                svg {
                     opacity: .8;
                 }
             }
