--- a/src/component/style/style.scss
+++ b/src/component/style/style.scss
@@ -747,8 +747,10 @@ body {
         }
         .button {
             button {
-                font-size: .9rem;
+                font-size: 13px;
+                font-weight: 700;
                 border-radius: 2px;
+                background-color: #0ec045;
             }
         }
         .btn-text {
