--- a/desktop/desktop.css
+++ b/desktop/desktop.css
@@ -23,7 +23,7 @@ body, html, .desktop {
 
 .desktop {
   z-index: 8000;
-  background: url(img/IMG_5572.JPG);
+  background: url(img/desktop.jpg);
   background-size: cover;
 }
 
@@ -520,7 +520,7 @@ input::placeholder {
 }
 
 .startmenu .tiles .tile.photos {
-  background: url(img/IMG_5546.JPG) center no-repeat;
+  background: url(img/photo_IMG_5198.jpg) center no-repeat;
   background-size: cover;
 }
 
@@ -752,26 +752,27 @@ a {
   background-color: #fefefe;
   margin: auto;
   padding: 0;
-  width: 60%;
-  max-width: 1200px;
+  width: 50%;
 }
 
 /* The Close Button */
 
 .close {
-  z-index: 32000;
+  z-index: 33000;
   color: white;
   position: absolute;
   top: 10px;
   right: 25px;
   font-size: 35px;
   font-weight: bold;
+  opacity: 0.6 !important;
 }
 
 .close:hover, .close:focus {
   color: white;
   text-decoration: none;
   cursor: pointer;
+  opacity: 1 !important;
 }
 
 /* Hide the slides by default */
@@ -841,5 +842,5 @@ img.hover-shadow {
 }
 
 .hover-shadow:hover {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgb(0, 0, 0), 0 6px 20px 0 rgb(0, 0, 0);
 }
